Generator.Tests.Abstraction/TestCases/InvalidTypeConversion/Composition1/InvalidTypeConversionToEntity1.cs
namespace Paukertj.Autoconverter.Generator.Tests.Abstraction.TestCases.InvalidTypeConversion.Composition1
{
    public class InvalidTypeConversionToEntity1
    {
        public int Property { get; set; }
    }
}
